export enum TipoPessoa {
  arbitro = 'arbitro',
  tecnico = 'tecnico',
  atleta = 'atleta',
  auxiliar = 'auxiliar',
  delegado = 'delegado',
}